--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
 .App {
   text-align: center;
+  width: 80vw;
+  margin: auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  margin-top: 3vh;
+  margin-bottom: 1vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.logo {
+  width: 10vw;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.score {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+h2 {
+  padding: 0;
+  margin: 1%;
+}
+h3 {
+  padding: 0;
+  margin: 1%;
+  width: 5vh;
+}
+.button1 {
+  width: 3vw;
+}
+.cards {
+  height: 50vh;
+  display: flex;
+  justify-content: space-evenly;
+}
+.card {
+  margin: 2%;
+}
+img {
+  width: 15vw;
+}
+.add {
+  height: 3vh;
+  padding: auto;
+  margin: auto 0;
+}
+.players {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.score1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.players-score {
+  width: 100px;
 }
